logs/dag_id=sql_branch_dag/run_id=manual__2022-07-05T09:45:21.510002+00:00/task_id=create_table/attempt=1.log
[2022-07-05 09:45:22,882] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: sql_branch_dag.create_table manual__2022-07-05T09:45:21.510002+00:00 [queued]>
[2022-07-05 09:45:22,954] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: sql_branch_dag.create_table manual__2022-07-05T09:45:21.510002+00:00 [queued]>
[2022-07-05 09:45:22,955] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-07-05 09:45:22,960] {taskinstance.py:1357} INFO - Starting attempt 1 of 1
[2022-07-05 09:45:22,961] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-07-05 09:45:23,051] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): create_table> on 2022-07-05 09:45:21.510002+00:00
[2022-07-05 09:45:23,070] {standard_task_runner.py:52} INFO - Started process 1090 to run task
[2022-07-05 09:45:23,091] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'sql_branch_dag', 'create_table', 'manual__2022-07-05T09:45:21.510002+00:00', '--job-id', '132', '--raw', '--subdir', 'DAGS_FOLDER/sql_branch_operator.py', '--cfg-path', '/tmp/tmpdpm6o85k', '--error-file', '/tmp/tmp7rh02hi2']
[2022-07-05 09:45:23,103] {standard_task_runner.py:80} INFO - Job 132: Subtask create_table
[2022-07-05 09:45:23,407] {task_command.py:370} INFO - Running <TaskInstance: sql_branch_dag.create_table manual__2022-07-05T09:45:21.510002+00:00 [running]> on host dfb99dfc9d64
[2022-07-05 09:45:23,824] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=sql_branch_dag
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-07-05T09:45:21.510002+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-07-05T09:45:21.510002+00:00
[2022-07-05 09:45:23,849] {base.py:68} INFO - Using connection ID 'postgres_con' for task execution.
[2022-07-05 09:45:23,858] {dbapi.py:213} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS customer (
                firstname TEXT NOT NULL,
                lastname TEXT NOT NULL,
                country TEXT NOT NULL,
            );, parameters: None
[2022-07-05 09:45:23,860] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 193, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 217, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 6:             );
                    ^

[2022-07-05 09:45:23,883] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=sql_branch_dag, task_id=create_table, execution_date=20220705T094521, start_date=20220705T094522, end_date=20220705T094523
[2022-07-05 09:45:23,920] {standard_task_runner.py:97} ERROR - Failed to execute job 132 for task create_table (syntax error at or near ")"
LINE 6:             );
                    ^
; 1090)
[2022-07-05 09:45:23,967] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-07-05 09:45:24,094] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
